After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 772901 - gsd-color segfaults
gsd-color segfaults
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: color
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Richard Hughes
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2016-10-13 23:02 UTC by Alberts Muktupāvels
Modified: 2016-10-14 13:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
color: fix segfault (900 bytes, patch)
2016-10-13 23:05 UTC, Alberts Muktupāvels
committed Details | Review

Description Alberts Muktupāvels 2016-10-13 23:02:50 UTC
Problem comes from gcm_session_get_output_edid in gsd-color-state.c. When edid is found in cache NULL is returned not edid. That leads to segfault when trying to access error->message.
Comment 1 Alberts Muktupāvels 2016-10-13 23:05:08 UTC
Created attachment 337676 [details] [review]
color: fix segfault