color: Fix incorrect return value

As introduced in 149e1cc

https://bugzilla.gnome.org/show_bug.cgi?id=772901